--- a/_config.yml
+++ b/_config.yml
@@ -21,16 +21,16 @@
 title: Kundan Vishnu Gaikwad
 email: kundan@example.com
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  Embedded Systems Engineer
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 github:
-username:  kundan21099
+  username:  kundan21099
+
+linkedin_url: "https://www.linkedin.com/in/kundan-gaikwad/"  
 
 # Build settings
-theme: jekyll-theme-minimal
+theme: jekyll-theme-minimal 
 plugins:
   - jekyll-feed
   - jekyll-github-metadata
